# edge-vista

./: .gitignore  LICENSE  README.md
codes/: README.md
codes/anomaly-detection/: README.md  anomaly-detection-fft.py  anomaly-detection-psd.py  dft-hm.py  main.py  mwe-fft-power-psd.py  pyproject.toml
codes/anomaly-detection/utils/: signals.py
codes/ansible/: README.md  deploy-node-exporter.yml  deploy-pi-cam.yml  inventory.ini  node-exporter.service.j2  pi-cam.service.j2
codes/esp32-cam/: README.md  platformio.ini
codes/esp32-cam/include/: config.example.hpp
codes/esp32-cam/src/: main.cpp
codes/esp32-cam/tools/: main.py  pyproject.toml
codes/esp32-iot/: README.md
codes/esp32-iot/include/: config.example.hpp
codes/esp32-iot/src/: main.cpp
codes/esp32-iot/test/: websocket.html
codes/esp32-playground/: platformio.ini
codes/esp32-playground/include/: config.example.hpp
codes/influxdb/: README.md  compose.yml
codes/led-rest/: platformio.ini
codes/led-rest/src/: main.cpp
codes/mosquitto/: Dockerfile  README.md  compose.yml  mosquitto.conf
codes/nodered/: README.md  compose.yml
codes/nodered/data/: flows.json  package-lock.json  package.json
codes/observability/: README.md  compose.yml
codes/observability/prometheus/: prometheus.yml
codes/pi-cam/: README.md  main.py  pyproject.toml
codes/pi-cam/modules/: camera_worker.py  config.py  inference_worker.py  mqtt_worker.py  shared.py  stream.py
docs/: Bibliography.bib  README.md  common.typ  justfile  main.typ
docs/parts/: anomaly-detection.typ  intro.typ  iot-ai.typ  rpi.typ
(+52 files in other folders)
