[project]
name = "pi-cam"
version = "0.1.0"
description = "Raspberry Pi camera object detection"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
	"torch",
	"torchvision",
	"opencv-python>=5.0.0.93",
	"paho-mqtt>=2.1.0",
	"python-dotenv>=1.2.2",
	"ultralytics>=8.4.96",
	"onnx>=1.22.0",
	"onnxruntime>=1.27.0",
	"onnxslim>=0.1.94",
	"flask>=3.1.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
